src/test/resources/parse/InvalidConstructor.out
error: Unexpected token, expected `super` or `self` keyword
--> ./InvalidConstructor.casc:4:12
3 | impl InvalidConstructor {
4 |     new() : pub()
                ^^^
5 | }