src/test/resources/parse/InvalidConstructor.casc
class InvalidConstructor

impl InvalidConstructor {
    new() : pub()

    new(a: i32)

    new(b: i32)
}